<resources>
    <!--    <string name="app_name">Teacher_Panel_Application</string>-->
    <string name="app_name">Class Connect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="programming_languages">
        <item>Select Semester</item>
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
    </string-array>
    <string-array name="classYearArray">
        <item>Select Year</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </string-array>
    <string-array name="pdf_purpose_array">
        <item>Select PDF Purpose</item>
        <item>Assignment</item>
        <item>Quiz</item>
        <item>Study Material</item>
    </string-array>
    <string-array name="major_array">
        <item>Select Major</item>
        <item>BSSE</item>
        <item>BSCS</item>
        <item>BSAI</item>
        <item>BSMC</item>
    </string-array>

    <string name="admob_app_id">ca-app-pub-4144305165966580~6299934712</string>
    <string name="admob_banner_id">ca-app-pub-4144305165966580/3630690721</string>
    <string name="announcementimage">announcementImage</string>
    <string name="upload">Upload</string>
    <string name="classDetails">Class Details</string>
    <string name="postDetails">Post Details</string>
    <string name="uploadedHistory">Upload History</string>
    <string name="profile">Profile</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="department">Department</string>
    <string name="department1">Department:</string>
    <string name="class_location">Class Location</string>
    <string name="subject">Subject</string>
    <string name="subject1">Subject:</string>
    <string name="today_s_topic">Today\'s Topic</string>
    <string name="key">Key</string>
    <string name="minutes">Minutes</string>
    <string name="enter_class_session_time_in_n_minutes">Enter class session time in\n minutes</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="description_optional">Description</string>
    <string name="due_date">Due Date</string>
    <string name="or">OR</string>
    <string name="select_an_image">Select an Image</string>
    <string name="online">Online</string>
    <string name="name">Name:</string>
    <string name="duration">Duration:</string>
    <string name="location">Location:</string>
    <string name="topic">Topic:</string>
    <string name="started_at">Started At:</string>
    <string name="time_left">Time Left:</string>
    <string name="announcement_data">Announcement data</string>
    <string name="home">Home</string>
    <string name="class_not_posted_yet">Class not posted yet</string>
    <string name="get_started">Get Started as Teacher</string>
    <string name="get_started1">Get Started as Student</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="class_nconnect">Class\nConnect</string>
    <string name="inspiring_tech_solution_for_a_nbrighten_future">Inspiring Tech Solution for a\nBrighten future</string>
    <string name="have_no_account">Have no account</string>
    <string name="log_in">Login</string>
    <string name="sig_up">SignUp</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or\n Login with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an account</string>
    <string name="back_to_log_in">Back to Log in</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="we_will_send_you_an_email_with_a_link_to_reset_the_password">we will send you an Email with a link to reset the password</string>
    <string name="if_you_forget_your_password_don_t_worry_nyou_need_to_enter_your_registered_email_here">If you forget your password don\'t worry \nyou need to enter your registered Email here!</string>
    <string name="name1">Name</string>
    <string name="please_check_you_inbox">Please Check you Inbox</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="create_group">Create Group</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_data">Edit Data</string>
    <string name="share_on_whatsapp">Share On Whatsapp</string>
    <string name="edit_or_share">Edit or Share</string>
    <string name="_10003">✓</string>
    <string name="delete">Delete</string>
    <string name="no">NO</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="notification">Notification</string>
    <string name="help_amp_support"><![CDATA[help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="term_amp_conditionsTxt">
    <b>Terms and Conditions</b>\n\n
    Welcome to Class Connect! These terms and conditions outline the rules and regulations for the use of our mobile application.\n\n
    By accessing this app, we assume you accept these terms and conditions. Do not continue to use Class Connect if you do not agree to all of the terms and conditions stated on this page.\n\n
    The following terminology applies to these Terms and Conditions, Privacy Statement, and Disclaimer
        <b>\nNotice and all Agreements:</b>\n\n
    "Client", "You", and "Your" refer to you, the person accessing this app and accepting the Company\'s terms and conditions. "The Company", "Ourselves", "We", "Our", and "Us", refer to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves, or either the Client or ourselves.\n\n
    <b>Data Usage and Storage:</b>\n\n
    Class Connect requires certain information to function properly. This information is used solely for the purpose of displaying data in the app.\n\n
    The data provided by users is uploaded to Firebase Database for storage and retrieval within the app.\n\n
    Users have the option to delete their data within the app. Please note that deleting the data will result in its permanent removal from our database.\n\n
    <b>Intellectual Property:</b>\n\n
    All content included in Class Connect, such as text, graphics, logos, images, and digital downloads, is the property of Class Connect or its content suppliers and is protected by international copyright laws.\n\n
    <b>Limitation of Liability:</b>\n\n
    In no event shall Class Connect or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on Class Connect\'s website, even if Class Connect or a Class Connect authorized representative has been notified orally or in writing of the possibility of such damage.\n\n
    <b>Changes:</b>\n\n
    Class Connect reserves the right, at its sole discretion, to modify or replace these Terms at any time. If a revision is material, we will try to provide at least 30 days\' notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.\n\n
    <b>Contact Us:</b>\n\n
    If you have any questions about these Terms, please contact us at Help and Support Section.\n\n
    By using Class Connect, you signify your acceptance of these terms. If you do not agree to these terms, please do not use our app.\n
</string>
    <string name="dismiss">Dismiss</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="edit_data_here">Edit Data Here</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="submitted_pdf_from_students">Submitted PDF From Students</string>
    <string name="don_t_have_account">Don\'t Have Account ?</string>

</resources>